--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,12 @@
     "type": "magento2-module",
     "require": {
         "magento/framework": "102.0.*",
-        "php": "~7.1.3||~7.2.0"
+        "php": "~7.1.3|~7.2.0|~7.3.0"
     },
     "license": [
         "MIT"
     ],
-    "version": "0.0.2",
+    "version": "0.0.3",
     "autoload": {
         "files": [ "registration.php" ],
         "psr-4": {
